Create adapter and CardView for them

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
 
     api project(path: ':data')
     implementation rootProject.recyclerview
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
