--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,7 +21,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
@@ -32,9 +32,29 @@ task clean(type: Delete) {
 ext {
     // Android support libs and UI
     constraintLayout = "androidx.constraintlayout:constraintlayout:1.1.3"
-    recyclerview = "androidx.recyclerview:recyclerview:1.0.0"
-    def supportLibVersion = "1.0.2"
-    appcompat = "androidx.appcompat:appcompat:$supportLibVersion"
+    recyclerView = "androidx.recyclerview:recyclerview:1.0.0"
+    cardView = "androidx.cardview:cardview:1.0.0"
+    appcompat = "androidx.appcompat:appcompat:1.0.2"
 
+    //Rx
+    rxjava = "io.reactivex.rxjava2:rxjava:2.2.7"
+    rxandroid = "io.reactivex.rxjava2:rxandroid:2.1.1"
 
+    // Network
+    def okHttpVersion = "3.14.0"
+    gson = "com.google.code.gson:gson:2.8.5"
+    okhttp = "com.squareup.okhttp3:okhttp:$okHttpVersion"
+    okhttpLogging = "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+
+    // Database
+    def roomVersion = "1.1.1"
+    room = "android.arch.persistence.room:runtime:$roomVersion"
+    roomAnnotationProcessor = "android.arch.persistence.room:compiler:$roomVersion"
+    roomRxJava = "android.arch.persistence.room:rxjava2:$roomVersion"
+
+    //Retrofit
+    def retrofit = "2.5.0"
+    retrrofit = "com.squareup.retrofit2:retrofit:2.3.0"
+    retrofitRxAdapter = "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    retrofitGsonConverter = "com.squareup.retrofit2:converter-gson:$retrofit"
 }
