--- a/data/build.gradle
+++ b/data/build.gradle
@@ -23,8 +23,21 @@ android {
 }
 
 dependencies {
+    implementation rootProject.rxjava
+    // Json
+    implementation rootProject.gson
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // Network
+    implementation rootProject.okhttp
+    implementation rootProject.okhttpLogging
+
+    //Database
+    implementation rootProject.room
+    annotationProcessor rootProject.roomAnnotationProcessor
+    implementation rootProject.roomRxJava
+
+    //Retrofit
+    implementation rootProject.retrrofit
+    implementation rootProject.retrofitRxAdapter
+    implementation rootProject.retrofitGsonConverter
 }
